# crespo

./: .gitignore  README.md  concat.xml  structure.xml  summarised.xml
.github/workflows/: publish.yml
CLI/: MANIFEST.in  README.md  cli.py  concat.xml  counter.py  generate.py  keystore.py  main.py  pyproject.toml  summary.py  urai.xml  walker.py
CLI/crespo/: README.md  cli.py  config.py  counter.py  generate.py  keystore.py  main.py  parse.py  security.py  summary.py  walker.py
CLI/crespo/tests/: test.md  test.py  test2.py
benchmarks/: CRESPO BENCH MARKS.docx  ~$ESPO BENCH MARKS.docx
benchmarks/output structure mode/: axios.xml  express.xml  fastapi.xml  flask.xml  kara.xml  moodilist.xml  requests.xml  urai.xml
sample outputs/: concat.xml  structure.xml  summarised.xml  summary.xml
